# data-repository

./: .gitignore  .invenio  CONTRIBUTING.md  LICENSE  Pipfile  README.md  docker-compose.full.yml  docker-services.yml  invenio.cfg
app_data/: pages.yaml
app_data/pages/: about.html
assets/less/site/elements/: button.variables
assets/less/site/globals/: site.overrides  site.variables
docker/nginx/: test.crt  test.key
docker/pgadmin/: servers.json
site/: .gitkeep  setup.cfg
site/data_repository/: views.py  webpack.py
site/data_repository/templates/semantic-ui/data_repository/: footer.html
templates/semantic-ui/invenio_app_rdm/: frontpage.html  site_footer.html
templates/semantic-ui/invenio_communities/details/: header.html
