
[metadata]
name = data-repository

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    data_repository_views = data_repository.views:create_blueprint
invenio_assets.webpack =
    data_repository_theme = data_repository.webpack:theme
